--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 .quasar
 /dist
 /quasar.config.*.temporary.compiled*
+/src/assets
 
 # Cordova related directories and files
 /src-cordova/node_modules
